# non-adaptive-sorts-research

./: CMakeLists.txt
adaptive_sorts/: CmakeLists.txt  adaptive_sorts.cpp  adaptive_sorts.h
documents/: Аннотация.docx  Отзыв_научного_руководителя.docx  Титульник_реферат.docx
experiment/: CMakeLists.txt  experiment.cpp  generator.cpp  generator.h
nonadaptive_sorts/: CMakeLists.txt  nonadaptive_sorts.cpp  nonadaptive_sorts.h
